# modulos

./: README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
modulos/: modulos.py
src/modulos/: modulos.py
tests/: test_modulos.py
