[metadata]
name = modulos
version = 0.0.4
description = Simple python library for modulo operations
long_description = file: README.md
long_description_content_type = text/markdown
author = Alexandre Chaminas
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[project.urls]
Homepage = "https://github.com/samhanic/modulos"

[options]
packages =
    modulos
python_requires = >=3.5
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    numpy>=1.22.4

[options.package_data]
modulos = py.typed

[flake8]
max-line-length = 160